// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <span
      class="sc-fKFyDc jHCVxA sc-iwyYcG gAkelF sc-ikPAkQ gqEzvs sc-tYoTV hRuSZt"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <span
      class="sc-fKFyDc jHCVxA sc-iwyYcG brBCdy sc-ikPAkQ gqEzvs sc-tYoTV bAnLdm"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
